# optimize-angles

./: .gitignore  ChangeLog  Makefile.am  README.md  configure.ac  configure_ecmwf.sh
plot/: compare_quadrature.m  evaluate_quadrature.m  loadnc.m  print_quadrature.m
run/: Makefile  run_rt.sh
run/optical-depth/: ecckd-1.0_evaluation1_lw_climate_fsck-32b_optical-depth_present.nc  ecckd-1.0_evaluation2_lw_climate_fsck-32b_optical-depth_present.nc
run/quadrature/: REFERENCE-quadrature_optimized-default-subset.nc  REFERENCE-quadrature_optimized-default.nc  quadrature_elsasser.nc  quadrature_gauss-jacobi-5.nc  quadrature_gauss-laguerre.nc  quadrature_gauss-legendre.nc  quadrature_lacis.nc
src/include/: OutputDataFile.h  write_standard_attributes.h
src/optimize_angles/: AtmosProfile.cpp  AtmosProfile.h  AtmosProfiles.cpp  AtmosProfiles.h  Makefile.am  OptimizeAngles.h  optimize_angles.cpp  optimize_transmission.cpp  radiative_transfer_lw.cpp  write_fluxes.cpp  write_fluxes.h
src/tools/: OutputDataFile.cpp
